# Platal-Game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile.temp  README.md  main.cpp
.github/workflows/: main.yml
Reports/: Holidays.md  Week_1.md  Week_2.md  Week_3.md  Week_4.md  Week_5.md
demo/: CMakeLists.txt  Game.cpp  Game.h  TextureManager.cpp  TextureManager.h  game.cpp  game.h  main.cpp  map.cpp  map.h  texture_manager.cpp  texture_manager.h
dialogues/: test.txt
maps/: room.csv
src/: Game.cpp  Game.h  HUD.cpp  HUD.h  TextureManager.cpp  TextureManager.h  character.cpp  character.h  clock.cpp  clock.h  clock_synapses.cpp  default_object.h  dialog.dia  dialogue.cpp  dialogue.h  game.cpp  game.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  object.cpp  object.h  platal_map.cpp  platal_map.h  quiz.cpp  quiz.h  quiz_questions.cpp  quiz_questions.h  stats.cpp  stats.h  synapses.h  task.h  toml  toml_parser.cpp  toml_parser.h
src/utils/: Animation.cpp  Animation.h  csv2map.cpp  csv2map.h  default_object.h  font_manager.cpp  font_manager.h  object_list.h  sound_manager.cpp  sound_manager.h  structs.h  texture_manager.cpp  texture_manager.h  tiles.cpp  tiles.h  toml_parser.cpp
tomls/: object.toml  tree.toml
